tests/expectations/parser/program/bidi_comment_2_fail.out
Error [EPAR0370051]: Unicode bidi override code point encountered.
    --> test:2:1
     |
   2 | â©*/
     | ^^^
